k8s/eks-manifests-theme.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viba-theme
  namespace: prod-annotation
spec:
  replicas: 2
  selector:
    matchLabels: { app: viba-theme }
  template:
    metadata:
      labels: { app: viba-theme }
    spec:
      serviceAccountName: annot-backend-sa
      containers:
        - name: backend
          image: 686255979277.dkr.ecr.us-west-2.amazonaws.com/internal/annot-theme-backend:latest
          ports:
            - containerPort: 5001
        - name: nginx
          # 使用你的前端制品镜像，镜像内已包含构建产物和 nginx.conf
          image: 686255979277.dkr.ecr.us-west-2.amazonaws.com/internal/annot-theme-frontend:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: viba-theme-nginx
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: viba-theme-svc
  namespace: prod-annotation
spec:
  selector: { app: viba-theme }
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
